fixed landing page image overlap issue

--- a/src/styles/styles.css
+++ b/src/styles/styles.css
@@ -332,12 +332,11 @@ footer {
   font-size: 64px;
   font-weight: 400;
   line-height: 1.0625;
-  margin: 70px auto 35px;
+  margin: 50px auto 35px;
 }
 .landingPage header .shortDesc {
   font-size: 18px;
   line-height: 1.3333333333;
-  margin-bottom: 80px;
   max-width: 600px;
 }
 .landingPage .categories {
